@@ -167,7 +167,12 @@ void UPnP::getAddress()
 {
 	try
 	{
-		if(GD::bl->settings.uPnPIpAddress().empty() || GD::bl->settings.uPnPIpAddress() == "0.0.0.0" || GD::bl->settings.uPnPIpAddress() == "::")
+		if(!GD::bl->settings.uPnPIpAddress().empty() && !BaseLib::Net::isIp(GD::bl->settings.uPnPIpAddress()))
+		{
+			//Assume address is interface name
+			_address = BaseLib::Net::getMyIpAddress(GD::bl->settings.uPnPIpAddress());
+		}
+		else if(GD::bl->settings.uPnPIpAddress().empty() || GD::bl->settings.uPnPIpAddress() == "0.0.0.0" || GD::bl->settings.uPnPIpAddress() == "::")
 		{
 			_address = BaseLib::Net::getMyIpAddress();
 			if(_address.empty()) GD::out.printError("Error: No IP address could be found to bind the server to. Please specify the IP address manually in main.conf.");
